; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/sqlite3/extr_sqlite3.c_sqlite3_bind_blob64.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/sqlite3/extr_sqlite3.c_sqlite3_bind_blob64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3_bind_blob64(i32* %0, i32 %1, i8* %2, i32 %3, void (i8*)* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca void (i8*)*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store void (i8*)* %4, void (i8*)** %11, align 8
  %12 = load void (i8*)*, void (i8*)** %11, align 8
  %13 = icmp ne void (i8*)* %12, @SQLITE_DYNAMIC
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32, i32* %10, align 4
  %17 = icmp sgt i32 %16, 2147483647
  br i1 %17, label %18, label %22

18:                                               ; preds = %5
  %19 = load i8*, i8** %9, align 8
  %20 = load void (i8*)*, void (i8*)** %11, align 8
  %21 = call i32 @invokeValueDestructor(i8* %19, void (i8*)* %20, i32 0)
  store i32 %21, i32* %6, align 4
  br label %29

22:                                               ; preds = %5
  %23 = load i32*, i32** %7, align 8
  %24 = load i32, i32* %8, align 4
  %25 = load i8*, i8** %9, align 8
  %26 = load i32, i32* %10, align 4
  %27 = load void (i8*)*, void (i8*)** %11, align 8
  %28 = call i32 @bindText(i32* %23, i32 %24, i8* %25, i32 %26, void (i8*)* %27, i32 0)
  store i32 %28, i32* %6, align 4
  br label %29

29:                                               ; preds = %22, %18
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local i32 @assert(i32) #1

declare dso_local void @SQLITE_DYNAMIC(i8*) #1

declare dso_local i32 @invokeValueDestructor(i8*, void (i8*)*, i32) #1

declare dso_local i32 @bindText(i32*, i32, i8*, i32, void (i8*)*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
